--- a/src/styles/blog-content.scss
+++ b/src/styles/blog-content.scss
@@ -47,6 +47,7 @@
       padding: 0;
       line-height: var(--line-height-loose);
       font-size: var(--font-size-xl);
+      text-align: justify;
 
       &:last-child {
         margin-bottom: 0;
